<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_toolbar_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/back"
            app:backgroundTint="@color/White_Flight" />

        <TextView
            android:id="@+id/login_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/login"
            android:textColor="@color/White_Flight"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/person_login"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/person"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_toolbar" />

    <EditText
        android:id="@+id/user_mail"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_field_background"
        android:hint="@string/user_mail"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_login" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_field_background"
        android:hint="@string/user_passwd"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_mail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="85dp"
        android:layout_height="32sp"
        android:text="@string/login"
        android:textSize="8sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_password"
        android:background="@drawable/button_rectangle"
        app:backgroundTint="@color/White_Flight"
        android:textColor="@color/dark_blue"/>

    <TextView
        android:id="@+id/phrase2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register"
        app:layout_constraintLeft_toLeftOf="@id/login"
        app:layout_constraintRight_toLeftOf="@id/registerRedirecting"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:textColor="@color/White_Flight"/>

    <TextView
        android:id="@+id/registerRedirecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_u"
        android:textColor="@color/orange"
        app:layout_constraintLeft_toRightOf="@id/phrase2"
        app:layout_constraintRight_toRightOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <TextView
        android:id="@+id/password_forgotten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_forgotten"
        app:layout_constraintLeft_toLeftOf="@id/phrase2"
        app:layout_constraintRight_toRightOf="@id/registerRedirecting"
        app:layout_constraintTop_toBottomOf="@id/phrase2"
        android:textColor="@color/White_Flight"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/organizer_participant_redirection"
        android:text="@string/organizer_redirect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/White_Flight"
        android:layout_marginBottom="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>