<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

                <ImageView
                    android:id="@+id/home_background"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/home_background"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:alpha="0.45"
                    android:background="@color/dark_green_blue"
                    app:layout_constraintBottom_toBottomOf="@id/home_background"
                    app:layout_constraintEnd_toEndOf="@id/home_background"
                    app:layout_constraintStart_toStartOf="@id/home_background"
                    app:layout_constraintTop_toTopOf="@id/home_background" />

                <TextView
                    android:id="@+id/event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calibri"
                    android:text="@string/dm_summit"
                    android:textColor="@color/White_Flight"
                    android:textSize="50dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/loginPage"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calibri"
                    android:text="16.06.2021"
                    android:textColor="@color/White_Flight"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/event_title" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerPage"
                    android:layout_width="87dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rectangle_solid"
                    android:text="@string/register"
                    android:textColor="@color/dark_blue"
                    android:textSize="8sp"
                    app:backgroundTint="@color/White_Flight"
                    app:layout_constraintBottom_toBottomOf="@id/home_background"
                    app:layout_constraintLeft_toRightOf="@id/loginPage"
                    app:layout_constraintRight_toRightOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginPage"
                    android:layout_width="87dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rectangle_border"
                    android:text="@string/login"
                    android:textColor="@color/White_Flight"
                    android:textSize="8sp"
                    app:backgroundTint="@color/White_Flight"
                    app:layout_constraintBottom_toBottomOf="@id/home_background"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/registerPage" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_participation"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rectangle_solid"
                    android:text="confirmer la participation"
                    android:textSize="8sp"
                    app:backgroundTint="@color/orange"
                    app:layout_constraintBottom_toBottomOf="@id/home_background"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/event_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/description"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_background" />

                <TextView
                    android:id="@+id/sponsors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="Nos Sponsors"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/event_description" />

                <ImageView
                    android:id="@+id/sponsors1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/cse"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/sponsors2"
                    app:layout_constraintTop_toBottomOf="@id/sponsors" />

                <ImageView
                    android:id="@+id/sponsors2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/cse"
                    app:layout_constraintLeft_toRightOf="@+id/sponsors1"
                    app:layout_constraintRight_toLeftOf="@id/sponsors3"
                    app:layout_constraintTop_toBottomOf="@id/sponsors" />

                <ImageView
                    android:id="@+id/sponsors3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/cse"
                    app:layout_constraintLeft_toRightOf="@id/sponsors2"
                    app:layout_constraintRight_toRightOf="@id/sponsors4"
                    app:layout_constraintTop_toBottomOf="@id/sponsors" />

                <ImageView
                    android:id="@+id/sponsors4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/cse"
                    app:layout_constraintLeft_toRightOf="@id/sponsors3"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sponsors" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/participant_menu"
        >

        <include layout="@layout/footer" android:layout_gravity="bottom"
            android:layout_height="150dp"
            android:layout_width="match_parent"/>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
